Updates the README.md file.